# urlshortener

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  prd.md  pyproject.toml  security.md
.github/prompts/: generate-api-tests.prompt.md  generate-prd.prompt.md  security-audit.prompt.md
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: b80a2b9d38df_initial_schema.py
app/: config.py  database.py  exceptions.py  main.py  security.py  utils.py
app/models/: __init__.py  click.py  url.py
app/routers/: analytics.py  health.py  qrcode.py  redirect.py  urls.py
app/schemas/: click.py  common.py  url.py
app/services/: analytics_service.py  qr_service.py  shortcode.py  (+1 more)
tests/: conftest.py  test_analytics.py  test_expiration.py  test_qrcode.py  test_rate_limiting.py  test_redirect.py  test_services.py  test_urls.py
testsprite_tests/: TC001_post_api_urls_create_shortened_url.py  TC002_get_api_urls_list_urls_with_pagination.py  TC003_get_api_urls_short_code_retrieve_url_metadata.py  TC004_patch_api_urls_short_code_update_url_properties.py  TC005_delete_api_urls_short_code_soft_delete_url.py  TC006_get_short_code_redirect_to_original_url.py  TC007_get_api_urls_short_code_analytics_aggregated_summary.py  TC008_get_api_urls_short_code_clicks_list_raw_click_events.py  TC009_get_api_urls_short_code_qr_generate_qr_code_png.py  TC010_get_health_check_application_status.py  conftest.py  standard_prd.json  testsprite-mcp-test-report.html  testsprite-mcp-test-report.md  testsprite_backend_test_plan.json
(+11 files in other folders)
